@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.2.0 [unreleased]
 
+  Fixed issue where a c.p.CoGroup join on Fields.NONE would fail during planning.
+
   Updated c.p.a.Unique to optionally filter out null values.
 
   Added c.o.e.ScriptFunction and c.o.e.ScriptFilter operations to allow for more expressive Java scripts.
